--- a/package.yaml
+++ b/package.yaml
@@ -4,7 +4,7 @@ github:              "nutr1t07/wl-bot"
 license:             BSD3
 author:              "Nutr1t07"
 maintainer:          "nutr1t07@outlook.com"
-copyright:           "2019 Nutr1t07"
+copyright:           "2019-2020 Nutr1t07"
 
 extra-source-files:
 - README.md
@@ -35,6 +35,7 @@ dependencies:
 - bytestring
 - time
 - scotty
+- attoparsec
 
 extra-deps:
 
