--- a/stack.yaml
+++ b/stack.yaml
@@ -64,3 +64,7 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+#
+docker:
+  enable: true
+  image: utdemir/ghc-musl:v4-libgmp-ghc865
