--- a/package.yaml
+++ b/package.yaml
@@ -37,8 +37,10 @@ dependencies:
 - network
 - Rasterific
 - JuicyPixels
+- http-client
 - FontyFruity
 - base64-bytestring
+- containers
 
 library:
   source-dirs: src
